# GraphMini

./: .gitignore  CMakeLists.txt  README.md
include/: codegen.h  common.h  constant.h  graph_builder.h  graph_loader.h  graphmini_scheduler.hpp  graphpi_scheduler.hpp  ir.h  logging.h  logitem.h  meta.h  plan_module.h  timer.h  typedef.h
scripts/: compare_schedulers.sh  install_python.py  install_python.sh  uninstall_python.py  uninstall_python.sh
src/: CMakeLists.txt  compiler.cpp  graph_builder.cpp  graphmini_scheduler.cpp  graphpi_scheduler.cpp  logging.cpp  logitem.cpp  meta.cpp  plan_module.cpp  prep.cpp  prof_runner.cpp  profile.cpp  python_api.cpp  run.cpp  runner.cpp
src/backend/: graph.h
src/backend_prof/: graph.h
src/codegen/: CMakeLists.txt  codegen.cpp
src/codegen_output/: CMakeLists.txt
src/preprocess/: graph_converter.cpp
